--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Phillip Wang / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Phillip Wang"
 description              : &description "personal description"
-url                      : https://philipwangOvO.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://philipwangovo.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -28,7 +28,7 @@ author:
   location         : "Shanghai, China"
   employer         : "Shanghai Jiao Tong University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "philipwang@sjtu.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
